Resolved the issue of gaps between components by adding solid, transparent borders. The issue was being caused due to margin collapsing.

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,6 +3,8 @@
     background: var(--color-bg);
     background-image: url("https://www.transparenttextures.com/patterns/sos.png");
     border-style: solid;
+    border-color: transparent;
+    
 }
 
 section h5,h2 {
