--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,3 +1,7 @@
+#Skills{
+    border-style: solid;
+    border-color: transparent;
+}
 .Experience_Container{
     vertical-align: top;
     margin-top: 1rem;
