--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
     text-align: center; 
     background-image: url('../../Pictures/orion-nebula-g534aa112c_1280.jpg');
     background-size: cover;
-    border-style: solid;
+    
  }
 
 
